css/styles.css
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 - Typography
  1.1 - Headings
  1.2 - Body Copy
  1.3 - Buttons
  1.4 - Forms
2.0 - Navigation Menus
  2.1 - Main Menu
  2.2 - Footer Menu
3.0 - Content
  3.1 - Site Structure
  3.2 - Columns
4.0 - Media
5.0 - Utility
  5.1 - Background Colors
  5.2 - Alignments
  5.3 - Breakpoints
--------------------------------------------------------------*/

/*--------------------------------------------------------------
1.0 - TYPOGRAPHY
-------------------------------------------------------------- */

body {
  font-family:'freighttext pro', Sans-Serif;
  font-size: 10pt;
  color: #5E6868;
}

html * {
  padding: 0;
  margin: 0;
}








/*-- 1.1 - Headings --*/
h1, h2, .button-i {

  text-transform: uppercase;
}

h1, h2, .button-i {
  color: #91AEAE;
  font-family:'freightdisp pro', Serif;
  letter-spacing: 0.125rem;
}

h1 {
  display: none;
}

h1, .mobile-nav li, .main-nav li {
  letter-spacing: 0.125rem;
}

h2 {
  font-size: 1.5rem;
  padding: 10px 0;
}

.header-box {
  display: flex;
  align-items: center;
}

h2, .header-rule {
  justify-content: space-between;
}

.header-rule {
    height: 1px;
    width: 100%;
    background-color: #91AEAE;
}

/*-- 1.2 - Body Copy --*/

p{
  font-family:'freightsans pro', Sans-Serif;
}

ul {
  list-style-type: none;
}

/*-- 1.3 - Buttons --*/


a {
  color: #5E6868;
  text-decoration: none;
}

.mobile-nav-btn {
  color: lightgrey;
}

.main-nav li {
  padding: 0 7px;
}

.button-i {
  padding: 10px 20px;
  margin: 25px 0;
  border: 1px solid #91AEAE;
  display: inline-block;
  font-weight: bold;

}


/*-- 1.4 - Forms --*/

p {
  font-size: 1.125rem;
  line-height: 1.5rem;
}


/*--------------------------------------------------------------
2.0 - NAVIGATION MENUS
-------------------------------------------------------------- */

/*-- 2.1 - Main Menu --*/
.landing {
  height: 500px;
  position: relative;
  min-height: 500px;
  overflow-x: hidden;
  width: 100vw;
  background: url('../img/hero.jpg') center/cover no-repeat;
}

header {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: white;
  text-transform: uppercase;

}


.main-nav {
  display: none;
}

.mobile-nav {
  display: flex;
}

.mobile-nav {
  position: absolute;
  right: -200px;
  top: 0;
  bottom: 0;
  width: 200px;
  transition: right .75s ease;
}

.show {
  right: 0;
}

.mobile-nav-btn {
  display: block;
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1;
  font-size: 1.8rem;
}


.mobile-nav ul {
  text-align: center;
  width: 100%;
}
.mobile-nav li {
  padding: 20px 0;
  border-bottom: 1px solid lightgrey;
  background-color: white;
}

.mobile-nav li:first-of-type {
  background-color: #f2f5f5;
  color: #91AEAE;
}



/*-- 2.2 - Footer Menu --*/

/*--------------------------------------------------------------
3.0 - CONTENT
-------------------------------------------------------------- */

/*-- 3.1 - Site Structure --*/

.row:after {
  content: "";
  display: table;
  clear: both;
}

[class*='col-'] {
  float: left;
  padding-right: 25px;
  margin-bottom: 20px;
}

.wrapper {
  margin: 0 auto;
  width: 93%;
  max-width: 1140px;
}

.about, .menu {
  margin-top: 40px;

}

.menu-featured header, .menu-featured .text-box {
    width: 80%;
    margin: 0 auto;
}


/*-- 13.2 - Columns --*/

.col-1-2 {
    width: 50%;
}

.col-1-3 {
    width: 33.33%;
}

.col-2-3 {
    width: 66.66%;
}

.col-1-4 {
    width: 25%;
}

.col-3-4 {
    width: 75%;
}

.col-1-5 {
    width: 20%;
}

.col-2-5 {
    width: 40%;
}

.col-3-5 {
    width: 60%;
}

.col-4-5{
    width: 80%;
}

.col-1-6 {
    width: 16.66%;
}

.col-5-6 {
    width: 83.33%;
}

[class*='col-']:last-of-type {
    padding-right: 0px;
}

/*--------------------------------------------------------------
4.0 - MEDIA
-------------------------------------------------------------- */
.hero-img img {
 width: 100%;
}

img {
  position: absolute;
  top: 25%;
  left: 10%;
  width: 200px;
  height: 200px;
  transform: rotate(-15deg);
  mix-blend-mode: hard-light;
}

.about-img, .menu-img {
  background-color: lightgray;
  width: 100%;
  height: 400px;
}

.main-logo:hover {
  animation-name: wobble;
  animation-duration: 2s;
}
/*--------------------------------------------------------------
5.0 - UTILITY
-------------------------------------------------------------- */

/*-- 5.1 - Background Colors --*/

/*-- 5.2 - Alignments --*/

/*-- 5.3 - Breakpoints --*/








*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family:'freighttext pro', Sans-Serif;
  font-size: 10pt;
}

@keyframes wobble {
  from{transform:rotate(-15deg);}
  to{transform:rotate(10deg)}
}












/* This applies from 600px onwards */
@media (min-width: 600px) {


  body {
    width: 90%;
  }
  .wrapper {
    width: 90%;
  }


 
}

@media (min-width: 800px) {

    h1 {
    display: inline;
    margin-left: 2%;
  }
  .main-nav {
    margin-right: 2%;
  }
  header {
    justify-content: space-between;
  }

  .landing>header {
      padding: 15px 0;
}

  .main-nav li {
    display: inline-block;
  }
  .main-nav {
    display: block;
  }
  .mobile-nav, .mobile-nav-btn {
    display: none;
  }

  .wrapper {
    width: 85%;
  }

  .landing {
    height: 500px;
  }

  .about, .menu {
    margin-top: 100px;

  }

  .about, .menu-featured {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 100px;
  }

  .about .text-box {
    width: 66%;
    padding-right: 20px;
  }

  .about .text-box p {
    width: 85%;
  }

  .about-img, .menu-img {
    width: 33%;
  }

}

@media (min-width: 1200px) {
  .wrapper {
    width: 75%;
  }
}

